force-app/main/default/objects/Apttus_Approval__ApprovalJob__c/Apttus_Approval__ApprovalJob__c.object-meta.xml
<CustomObject>
    <description>Holds information about approval jobs for bulk submit, recall, approve and reject actions</description>
    <label>Approval Job</label>
    <nameField>
        <displayFormat>AJ-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>