force-app/main/default/objects/Apttus_Approval__ApprovalJob__c/fields/Apttus_Approval__ApexChildJobId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApexChildJobId__c</fullName>
    <description>The id of the chained async apex job associated with the parent job for this approval request action</description>
    <inlineHelpText>The id of the chained async apex job associated with the parent job for this approval request action</inlineHelpText>
    <label>Apex Child Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>