force-app/main/default/objects/Apttus_Approval__ApprovalJob__c/fields/Apttus_Approval__ApexParentJobId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApexParentJobId__c</fullName>
    <description>The id of the parent async apex job associated with this approval request action</description>
    <inlineHelpText>The id of the parent async apex job associated with this approval request action</inlineHelpText>
    <label>Apex Parent Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>