force-app/main/default/objects/Apttus_Approval__ApprovalJob__c/fields/Apttus_Approval__ApprovalRequestId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalRequestId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The approval request id for which this async queueable job applies</description>
    <inlineHelpText>The approval request id for which this async queueable job applies</inlineHelpText>
    <label>Approval Request Id</label>
    <referenceTo>Apttus_Approval__Approval_Request__c</referenceTo>
    <relationshipLabel>Approval Jobs</relationshipLabel>
    <relationshipName>Approval_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>