force-app/main/default/objects/Apttus_Approval__ApprovalJob__c/fields/Apttus_Approval__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Status__c</fullName>
    <description>Status of the apex queueable job</description>
    <inlineHelpText>Status of the apex queueable job</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>