force-app/main/default/objects/Apttus_Approval__ApprovalJob__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__ApprovalRequestId__c</columns>
    <columns>Apttus_Approval__ApexParentJobId__c</columns>
    <columns>Apttus_Approval__ApexChildJobId__c</columns>
    <columns>Apttus_Approval__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>